--- a/.gitignore
+++ b/.gitignore
@@ -5,53 +5,20 @@ yarn-debug.log*
 yarn-error.log*
 
 # Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
 
-# AWS
+# AWS credentials
 .aws/
 aws-exports.js
 
 # Logs
-logs
+logs/
 *.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
 
 # IDE files
 .vscode/
 .idea/
+.kiro/
 *.swp
 *.swo
 *~
@@ -65,23 +32,18 @@ jspm_packages/
 ehthumbs.db
 Thumbs.db
 
-# Build outputs
-dist/
-build/
-
 # Temporary files
 tmp/
 temp/
 *.tmp
-
-# AWS CDK
-cdk.out/
-
-# Generated files that can be recreated
 response.json
 test-payload.json
 
-# Sensitive deployment files (these should be in a separate private repo)
-# Uncomment if you want to exclude deployment configs
-# deploy-*.yaml
-# marketplace-config.json
+# AWS CDK build output
+cdk.out/
+
+# Development files
+lambda-extracted/
+*-new.html
+*-changeset.json
+*-update.json
